# examples

./: .gitignore  LICENSE  readme.md
coap-time-service/: readme.md  state-machine.asl.json  template.json
dns-filter/: .gitignore  readme.md
dns-filter/scripts/: load.sh  (+4 more)
event-bridge/: readme.md  template.json
kinesis-streams/: kinesis-streams.template.json  readme.md
mavlink-fifo/: mavlink.template.json  poll_queue.py  readme.md  send_heartbeat.py
momento-udp/: Readme.md  momento-udp-sdk.slnx  template.yaml
multi-modal/: multi-modal.template.json  readme.md
packet-capture/: packet-capture.slnx  readme.md  template.yaml
packet-counter/: .gitignore  packet-counter.template.json  readme.md
packet-counter-cpp/: packet-counter.template.json  readme.md
packet-counter-cpp/src/: CMakeLists.txt  Dockerfile  Makefile  main.cpp
packet-counter-go/: packet-counter.template.json  readme.md
packet-counter-multi-region/: packet-counter-global.template.json  packet-counter-region.template.json  packet_counter_test.py  readme.md
packet-counter-python/: packet-counter.template.json  readme.md
packet-counter-sfn/: packet-counter-sfn.template.json  readme.md
radius/: README.md  radius.sln
sqs/: readme.md  sqs.template.json
supabase-udp/: .gitignore  README.md  package.json  template.yaml
syslog/: readme.md  syslog-cw-s3.template.json
udp-to-http/: readme.md  udp-to-http.template.json
wireguard/: readme.md  wireguard.template.json
wireguard-echo/: readme.md  wireguard.sln
wireguard-iot-device/: HARDWARE.md  INSTALLATION.md  README.md  platformio.ini
(+119 files in other folders)
